@@ -1,0 +1,2 @@
+This empty directory serves as destination for temporary files
+created by some tests.
